tests/variables/valid/initialize.amu
s32 main() {
    s32 a = 2;
    return 0;
}