tests/variables/invalid/syntax_err_bad_decl_2.amu
main() : s32 {
    s32 bar:foo = 3;
    return bar;
}